--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@
     padding: 10px;
     color: white;
     justify-content: center;
+    align-items: center; 
+    display: flex; 
 }
 
 .item:nth-of-type(1) {
